src/test/deca/syntax/valid/synt/class_null_operator.deca
/*
    Description : Test sur une utilisation simple de l'opérateur null

    Résultat : OK
*/
class A{}
class B{
    A p = null;
}
