src/test/deca/syntax/invalid/synt/var_name_instanceof.deca
// @expected_output deca:8:19: missing IDENT at '='
/*
    Description : Test sur un déclaration de variable avec un nom réservé
    
    Résultat : rejeté à l'analyse syntaxique
*/
{
    int instanceof = 2;
}
